compiler/testData/cli/jvm/_jsr305/jsr305MigrationDefault.out
compiler/testData/cli/jvm/_jsr305/jsr305Migration.kt:3:19: error: null cannot be a value of a non-null type 'kotlin.String'.
    annotated.bar(null)
                  ^^^^
COMPILATION_ERROR
